array.island.Island.scala.error
Erreur de compilation :
Island:4: error: identifier expected but '=' found.
  var x:Int x=0
             ^Island:5: error: identifier expected but '=' found.
  var i:Int i=0
             ^Island:11: error: identifier expected but ')' found.
  island(num i:)
               ^Island:14: error: ')' expected but '}' found.
} 
^